hphp/hack/test/typecheck/reified_generics/class_soft_reification.php.exp
File "class_soft_reification.php", line 11, characters 3-15:
All type arguments must be specified because a type parameter is reified (Typing[4303])
  File "class_soft_reification.php", line 5, characters 7-13:
  Definition is here
